crates/php-parser/tests/snapshots/nikic_expr_tests__nikic_expr_nullsafe.snap
---
source: crates/php-parser/tests/nikic_expr_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "NullsafePropertyAccess": {
              "object": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 7,
                  "end": 9
                }
              },
              "property": {
                "kind": {
                  "Identifier": "b"
                },
                "span": {
                  "start": 12,
                  "end": 13
                }
              }
            }
          },
          "span": {
            "start": 7,
            "end": 13
          }
        }
      },
      "span": {
        "start": 7,
        "end": 15
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "NullsafeMethodCall": {
              "object": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 15,
                  "end": 17
                }
              },
              "method": {
                "kind": {
                  "Identifier": "b"
                },
                "span": {
                  "start": 20,
                  "end": 21
                }
              },
              "args": [
                {
                  "name": null,
                  "value": {
                    "kind": {
                      "Variable": "c"
                    },
                    "span": {
                      "start": 22,
                      "end": 24
                    }
                  },
                  "unpack": false,
                  "span": {
                    "start": 22,
                    "end": 24
                  }
                }
              ]
            }
          },
          "span": {
            "start": 15,
            "end": 25
          }
        }
      },
      "span": {
        "start": 15,
        "end": 27
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "NullsafePropertyAccess": {
              "object": {
                "kind": {
                  "New": {
                    "class": {
                      "kind": {
                        "Variable": "a"
                      },
                      "span": {
                        "start": 31,
                        "end": 33
                      }
                    },
                    "args": []
                  }
                },
                "span": {
                  "start": 27,
                  "end": 33
                }
              },
              "property": {
                "kind": {
                  "Identifier": "b"
                },
                "span": {
                  "start": 36,
                  "end": 37
                }
              }
            }
          },
          "span": {
            "start": 27,
            "end": 37
          }
        }
      },
      "span": {
        "start": 27,
        "end": 39
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "InterpolatedString": [
              {
                "Expr": {
                  "kind": {
                    "NullsafePropertyAccess": {
                      "object": {
                        "kind": {
                          "Variable": "a"
                        },
                        "span": {
                          "start": 41,
                          "end": 43
                        }
                      },
                      "property": {
                        "kind": {
                          "Identifier": "b"
                        },
                        "span": {
                          "start": 46,
                          "end": 47
                        }
                      }
                    }
                  },
                  "span": {
                    "start": 41,
                    "end": 47
                  }
                }
              }
            ]
          },
          "span": {
            "start": 39,
            "end": 49
          }
        }
      },
      "span": {
        "start": 39,
        "end": 51
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "InterpolatedString": [
              {
                "Expr": {
                  "kind": {
                    "Variable": "a"
                  },
                  "span": {
                    "start": 52,
                    "end": 54
                  }
                }
              },
              {
                "Literal": "?->b"
              }
            ]
          },
          "span": {
            "start": 51,
            "end": 59
          }
        }
      },
      "span": {
        "start": 51,
        "end": 60
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 60
  }
}
